--- a/optimized models/recommendation system 1.3.ipynb
+++ b/optimized models/recommendation system 1.3.ipynb
@@ -91,7 +91,7 @@
     "    \n",
     "\n",
     "\n",
-    "def vectorizeRecipes(recipes, ingredients, tags): # parses the recipes data into binary vectors of ingredients and tags in each recipe\n",
+    "def vectorizeRecipes(recipes, ingredients, tags): # parses the recipes data into binary matrices of ingredients and tags in each recipe\n",
     "    nIngredients=np.array([0]*len(recipes), dtype= np.uint8)\n",
     "    nTags=np.array([0]*len(recipes), dtype= np.uint8)\n",
     "    recipesIngredientsVectorized= np.zeros((np.shape(recipes)[0],np.shape(ingredients)[0]),np.uint8)\n",
@@ -107,7 +107,7 @@
     "            count=count+1\n",
     "        nIngredients[i]= count\n",
     "\n",
-    "    #for i in range(len(recipes)):\n",
+    "    for i in range(len(recipes)):\n",
     "        #process tags\n",
     "        count2=1\n",
     "        ts=literal_eval(recipes.loc[i,\"tags\"])\n",
@@ -116,14 +116,14 @@
     "            count2=count2+1\n",
     "        nTags[i]= count2\n",
     "\n",
-    "    return recipesIngredientsVectorized, recipesTagsVectorized, nIngredients, nTags # outputs two length m = |recipes| lists of vectors of length n and t, respectively.\n",
+    "    return recipesIngredientsVectorized, recipesTagsVectorized, nIngredients, nTags # outputs two matrices of with dimensions mxn and mxt, and two length m = |recipes| vectors.\n",
     "\n",
     "\n",
     "def generateRecommendations(recipes, personalIngredients, personalTags, recipeIngredientVectors, recipeTagVectors, nIngredients, nTags): #generates the personal recommendations for a user\n",
     "    iRatings= np.dot(recipeIngredientVectors, personalIngredients)/ nIngredients\n",
     "    tRatings= np.dot(recipeTagVectors, personalTags) / nTags\n",
-    "    print(\"calc done\")\n",
-    "    list=[]\n",
+    "    #print(\"calc done\")\n",
+    "    \n",
     "    ratings=(iRatings+tRatings)/2\n",
     "    recommend= np.argsort(ratings)[::-1][:25]\n",
     "    l=[]\n",
@@ -137,25 +137,17 @@
    "execution_count": 5,
    "id": "0baa0432-5cc0-4fda-bf58-ce0d2b892e2d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--- 41.92117762565613 seconds ---\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#warning - slow\n",
     "#run vectorization of recipes only once\n",
-    "import time\n",
-    "start_time = time.time()\n",
+    "#import time\n",
+    "#start_time = time.time()\n",
     "\n",
     "recipesV= vectorizeRecipes(recipes, ingredients, tags)\n",
     "recipesV=(np.copy(recipesV[0], order=\"F\"), np.copy(recipesV[1],order=\"F\"), recipesV[2], recipesV[3])\n",
     "\n",
-    "print(\"--- %s seconds ---\" % (time.time() - start_time))"
+    "#print(\"--- %s seconds ---\" % (time.time() - start_time))"
    ]
   },
   {
@@ -171,22 +163,20 @@
       "0         tuscan bread salad\n",
       "1    roast crock pot chicken\n",
       "Name: name, dtype: object\n",
-      "calc done\n",
-      "[('tuscan bread salad', 4.607639), ('blast chicken', 4.1208334), ('roast crock pot chicken', 4.017544), ('bake chicken onion garlic rosemari', 3.8552632), ('rosemari infus oil', 3.75), ('open peski pistachio nut', 3.732143), ('tuscan style pepper chicken', 3.717647), ('basic pesto recip', 3.6904764), ('brais balsam chicken garlic onion', 3.609375), ('easiest chicken recip', 3.6086955), ('boneless leg lamb', 3.594737), ('mediterranean herb oil', 3.578125), ('roast red potato rosemari', 3.575), ('roast chicken italian season', 3.5661764), ('roman roast veget', 3.53125), ('chicken vinegar mark bittman', 3.525), ('process pimiento pepper', 3.5192308), ('oven grill steak mark bittman', 3.5166667), ('wine reduct frozen cube', 3.5131578), ('south beach parmesan cracker', 3.5131578), ('simpl balsam vinaigrett', 3.5125), ('portabella mushroom', 3.4887218), ('herb marin ostrich', 3.478125), ('basil mint pesto', 3.4545455), ('chicken meatbal spaghetti meatbal', 3.45)]\n",
-      "--- 15.994617223739624 seconds ---\n"
+      "[('tuscan bread salad', 4.607639), ('blast chicken', 4.1208334), ('roast crock pot chicken', 4.017544), ('bake chicken onion garlic rosemari', 3.8552632), ('rosemari infus oil', 3.75), ('open peski pistachio nut', 3.732143), ('tuscan style pepper chicken', 3.717647), ('basic pesto recip', 3.6904764), ('brais balsam chicken garlic onion', 3.609375), ('easiest chicken recip', 3.6086955), ('boneless leg lamb', 3.594737), ('mediterranean herb oil', 3.578125), ('roast red potato rosemari', 3.575), ('roast chicken italian season', 3.5661764), ('roman roast veget', 3.53125), ('chicken vinegar mark bittman', 3.525), ('process pimiento pepper', 3.5192308), ('oven grill steak mark bittman', 3.5166667), ('wine reduct frozen cube', 3.5131578), ('south beach parmesan cracker', 3.5131578), ('simpl balsam vinaigrett', 3.5125), ('portabella mushroom', 3.4887218), ('herb marin ostrich', 3.478125), ('basil mint pesto', 3.4545455), ('chicken meatbal spaghetti meatbal', 3.45)]\n"
      ]
     }
    ],
    "source": [
     "#run individual analysis\n",
     "user=54216\n",
-    "start_time = time.time()\n",
+    "#start_time = time.time()\n",
     "\n",
     "personalV= parseReviews(user,interactions, recipes, ingredients,tags)\n",
     "personalRecommendations= generateRecommendations(recipes, personalV[0],personalV[1], recipesV[0],recipesV[1],recipesV[2], recipesV[3] )\n",
     "print(personalRecommendations[0:50])\n",
     "\n",
-    "print(\"--- %s seconds ---\" % (time.time() - start_time))\n",
+    "#print(\"--- %s seconds ---\" % (time.time() - start_time))\n",
     "#print(recipesV[0].flags)"
    ]
   },
