--- a/optimized models/recommendation system 1.3.1.1.ipynb
+++ b/optimized models/recommendation system 1.3.1.1.ipynb
@@ -25,7 +25,7 @@
     "r3= pd.read_csv(\"recipes_improved_tags.csv\", header= 0)\n",
     "recipes= r1.merge(r2, on= \"id\")\n",
     "recipes= recipes.merge(r3, on= \"id\")\n",
-    "ingredients= pd.read_json(\"new_ingredient_ids.json\", orient=\"index\")[0]\n",
+    "ingredients= pd.read_json(\"recipes_processed_key.json\")[\"ingredients\"]\n",
     "tags= pd.read_json(\"recipes_processed_key.json\")[\"tags\"]\n",
     "\n",
     "\n",
