--- a/Food_for_thought_website_v2.ipynb
+++ b/Food_for_thought_website_v2.ipynb
@@ -12,11 +12,7 @@
     "import pandas as pd\n",
     "\n",
     "interactions= pd.read_csv(\"interactions_processed.csv\", header= 0)\n",
-    "r1= pd.read_csv(\"recipes_processed_1.csv\", header= 0)\n",
-    "r2= pd.read_csv(\"recipes_with_new_ingredients.csv\", header= 0)\n",
-    "r3= pd.read_csv(\"recipes_improved_tags.csv\", header= 0)\n",
-    "recipes= r1.merge(r2, on= \"id\")\n",
-    "recipes= recipes.merge(r3, on= \"id\")\n",
+    "recipes= pd.read_csv(\"recipes_improved.csv\", header= 0)\n",
     "tags= pd.read_json(\"recipes_processed_key.json\")[\"tags\"]\n",
     "ingredients= pd.read_json(\"recipes_processed_key.json\")[\"ingredients\"]\n",
     "\n",
@@ -34,22 +30,22 @@
     "    ingredientsIncremented= np.array([0]*len(ingredients), dtype=np.uint16)\n",
     "    personalTags= np.array([0]*len(tags), dtype=np.float32)\n",
     "    tagsIncremented= np.array([0]*len(tags), dtype=np.uint16)\n",
-    "    \n",
-    "    for i in range(len(data)): \n",
+    "\n",
+    "    for i in range(len(data)):\n",
     "        for ingredient in literal_eval(data.loc[i,\"ingredients\"]): #process ingredients\n",
     "            #print(ingredient)\n",
     "            ingredientsIncremented[ingredient]= ingredientsIncremented[ingredient]+1\n",
     "            added= (data.loc[i,\"rating\"]-personalIngredients[ingredient])/ingredientsIncremented[ingredient]\n",
     "            personalIngredients[ingredient]= personalIngredients[ingredient]+added\n",
     "\n",
-    "    #for i in range(len(data)):\n",
+    "        #for i in range(len(data)):\n",
     "        for tag in literal_eval(data.loc[i,\"tags\"]): #process tags\n",
     "            tagsIncremented[tag]= tagsIncremented[tag]+1\n",
     "            added= (data.loc[i,\"rating\"]-personalTags[tag])/tagsIncremented[tag]\n",
     "            personalTags[tag]= personalTags[tag]+added\n",
-    "    \n",
+    "\n",
     "    return personalIngredients, personalTags # outputs 2 vectors of length n = |ingredients| and length t = |tags| respectively.\n",
-    "    \n",
+    "\n",
     "\n",
     "\n",
     "def vectorizeRecipes(recipes, ingredients, tags): # parses the recipes data into binary matrices of ingredients and tags in each recipe\n",
@@ -57,8 +53,8 @@
     "    nTags=np.array([0]*len(recipes), dtype= np.uint8)\n",
     "    recipesIngredientsVectorized= np.zeros((len(ingredients),len(recipes)),np.float32)\n",
     "    recipesTagsVectorized= np.zeros((len(tags),len(recipes)),np.float32)\n",
-    "    \n",
-    "    \n",
+    "\n",
+    "\n",
     "    for i in range(len(recipes)):\n",
     "        #process ingredients\n",
     "        count=0\n",
@@ -84,20 +80,20 @@
     "    iRatings= np.dot(recipeIngredientVectors.T, personalIngredients)/ nIngredients\n",
     "    tRatings= np.dot(recipeTagVectors.T, personalTags) / np.maximum( nTags, np.array([1]*len(nTags)))\n",
     "    #print(\"calc done\")\n",
-    "    \n",
+    "\n",
     "    ratings=(iRatings+tRatings)/2\n",
     "    recommend= np.argsort(ratings)[::-1][:25]\n",
     "    l=[]\n",
     "    #print(interactions[interactions[\"user_id\"]== userID].loc[:,\"recipe_id\"].values)\n",
-    "    for i in range(100):\n",
+    "    for i in range(len(recommend)):\n",
     "        #print(recipes.loc[recommend[i], \"id\"])\n",
-    "        id= recipes.loc[recommend[i], \"id\"] \n",
+    "        id= recipes.loc[recommend[i], \"id\"]\n",
     "        if id not in interactions[interactions[\"user_id\"]== userID].loc[:,\"recipe_id\"].values:\n",
     "            l.append((id, ratings[recommend[i]]))\n",
     "        if len(l)>24:\n",
     "            return l\n",
     "    return l\n",
-    "    \n",
+    "\n",
     "recipesV= vectorizeRecipes(recipes, ingredients, tags)"
    ]
   },
@@ -111,7 +107,6 @@
     "from flask import Flask, render_template, request, jsonify\n",
     "from threading import Thread\n",
     "\n",
-    "recipes2 = pd.read_csv('RAW_recipes.csv')\n",
     "def create_url(name,id):\n",
     "    url = 'https://www.food.com/recipe/'\n",
     "    for word in str(name).split():\n",
@@ -119,7 +114,7 @@
     "    url += str(id)\n",
     "    return url\n",
     "\n",
-    "recipes2['url'] = recipes2.apply(lambda x: create_url(x['name'], x['id']), axis=1)\n",
+    "recipes['url'] = recipes.apply(lambda x: create_url(x['name'], x['id']), axis=1)\n",
     "\n",
     "app = Flask(__name__)\n",
     "\n",
@@ -146,8 +141,8 @@
     "    result = []\n",
     "    for i in range(10):\n",
     "        id = personalRecommendations[i][0]\n",
-    "        result.append(str(i+1) + ': ' + recipes2.loc[recipes2['id'] == id, 'name'].values[0] + ',    score: ' + str(personalRecommendations[i][1]) + \n",
-    "                     ',    url: ' + recipes2.loc[recipes2['id'] == id, 'url'].values[0])\n",
+    "        result.append(str(i+1) + ': ' + recipes.loc[recipes['id'] == id, 'name'].values[0] + ',    score: ' + str(personalRecommendations[i][1]) +\n",
+    "                      ',    url: ' + recipes.loc[recipes['id'] == id, 'url'].values[0])\n",
     "    return jsonify({'Top recommendations': result})\n",
     "\n",
     "# Run Flask in a separate thread\n",
